# ProgramacionCientifica-UV

./: .gitignore  README.md
Tareas/: Tarea2.txt  Tarea3.txt
Unidad 1- Arquitectura, Ensamblador y Compiladores/: 0-Prequisites.txt  1-VirtualCPU.nb
Unidad 1- Arquitectura, Ensamblador y Compiladores/3-Cpp_By_Example/: Unidad1_1.cpp  Unidad1_2.cpp  Unidad2_1.cpp  Unidad2_2.cpp  Unidad2_3.cpp  Unidad3_1.cpp  Unidad3_2.cpp  Unidad3_3.cpp  Unidad3_4.cpp  Unidad3_5.cpp  Unidad4_1.cpp  Unidad4_2.cpp  Unidad4_3.cpp  Unidad4_4.cpp  Unidad4_5.cpp
Unidad 1- Arquitectura, Ensamblador y Compiladores/4-CallingModes/: CallingModes.pptx  example.cpp  example_asm1.S  example_asm2.S  example_asm3.S
Unidad 2- Simulacion de sistemas fisicos/: ideas_para_proyectos.txt
Unidad 2- Simulacion de sistemas fisicos/2.5- FFT/: FFT.nb  (+1 more)
Unidad 3- Ciencia de datos/: 1- Ajuste de modelos.nb  1.5- Ajuste de modelos.nb  2- Clasificador logistico.nb  3- Discriminante Lineal Fisher.nb  4- Linear Discriminant Analysis.nb  Ajuste de modelos.nb  Clasificador logistico.nb  Discriminante Lineal Fisher.nb  Linear Discriminant Analysis.nb  iris.csv
Unidad 5- Automatas celulares y criticalidad/: Criticalidad AC Wolfram.nb
Unidad 5- Automatas celulares y criticalidad/FreewayAC/: CMakeLists.txt
Unidad 5- Automatas celulares y criticalidad/FreewayAC/CLI/: optionparser.h
Unidad 5- Automatas celulares y criticalidad/FreewayAC/FreewayAC/: BmpWriter.cpp  BmpWriter.h  CellularAutomata.cpp  FreewayAC.vcxproj
Unidad 5- Automatas celulares y criticalidad/FreewayAC/MathematicaLink/: Makefile  main.tm
(+137 files in other folders)
